--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,16 @@
 accounts:
   - name: alice
-    coins: ["20000token", "200000000stake"]
+    coins: ['20000token', '2000000000000000000stake']
   - name: bob
-    coins: ["10000token", "100000000stake"]
+    coins: ['10000token', '1000000000000000000stake']
 validator:
   name: alice
-  staked: "100000000stake"
+  staked: '100000000stake'
 client:
   openapi:
-    path: "docs/static/openapi.yml"
+    path: 'docs/static/openapi.yml'
   vuex:
-    path: "vue/src/store"
+    path: 'vue/src/store'
 faucet:
   name: bob
-  coins: ["5token", "100000stake"]
+  coins: ['5token', '100000stake']
