--- a/vue/package.json
+++ b/vue/package.json
@@ -14,7 +14,8 @@
     "@cosmjs/proto-signing": "0.27.0",
     "@cosmjs/stargate": "0.27.0",
     "@starport/vue": "^0.3.5",
-    "@starport/vuex": "^0.3.5",
+    "@starport/vuex": "^0.1.47",
+    "antd": "^5.1.5",
     "buffer": "^6.0.3",
     "core-js": "^3.18.2",
     "vue": "^3.2.6",
